--- a/BannerOP.html
+++ b/BannerOP.html
@@ -63,6 +63,28 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
+                <img class="banniere" src="./img/Bannière/Zoro&SanjiWanoBanner.jpeg" alt="Zoro&Sanji" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Zoro & Sanji</p>
+                    <div class="appreciate-separator"></div>
+                    <p>WANO B&W</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+              <img class="banniere" src="./img/Bannière/Zorowanobanner.JPG" alt="Zoro" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Roronoa Zoro</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Wano Kuni</p>
+              </div>
+          </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
                 <img class="banniere" src="./img/Bannière/Mugiwarabannierecroix.png" alt="Mugiwara" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Mugiwara - symbole pour Vivi</p>
