--- a/PDemonSlayer.html
+++ b/PDemonSlayer.html
@@ -83,6 +83,48 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
+                <img src="./img/OTHER/Demon Slayer/ShinobuKocho2.jpeg" alt="Shinobu" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Shinobu Kocho</p>
+                    <p>Butterfly</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: ?</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/OTHER/Demon Slayer/Rengokucouchedesoleil.JPG" alt="Rengoku" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Kyojuro Rengoku</p>
+                    <p>Couché de soleil</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: YXNTW</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img class="tapion" src="./img/OTHER/Demon Slayer/kokushibo.jpeg" alt="Kokushibo" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Kokushibo</p>
+                    <p>1ère Lune Démoniaque</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: @_MiniKinder_</p>
+                </div>
+            </li>
+          <li class="appreciate-elem">
+            <img src="./img/OTHER/Demon Slayer/Giyucouchesoleil.JPG" alt="Giyu" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Tomioka Giyu</p>
+                <p>Couché de soleil</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: Bulehya</p>
+            </div>
+        </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
                 <img src="./img/OTHER/Demon Slayer/muzan2.jpeg" alt="Muzan" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Muzan Kibutsuji</p>
