--- a/POnePiece.html
+++ b/POnePiece.html
@@ -83,6 +83,48 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
+                <img src="./img/One piece/Namichild.JPG" alt="Nami" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Nami</p>
+                    <p>Child</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: ?</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/One piece/CoverOdaMugiwara.JPG" alt="Mugiwara" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Mugiwara</p>
+                    <p>Cover ODA</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: ODA</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/One piece/Luffychampdeble.JPG" alt="Luffy" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Monkey D. Luffy</p>
+                    <p>Champ de blé</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: YXNTW</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+              <img src="./img/One piece/ZoroLuffycoverxanimes.jpeg" alt="Zoro&Luffy" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Zoro & Luffy</p>
+                  <p>LE MONDE CHICO</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Auteur: coverxanimes</p>
+              </div>
+          </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
                 <img src="./img/One piece/Ace.JPG" alt="Ace" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Portgas D. Ace</p>
