--- a/focus.html
+++ b/focus.html
@@ -31,6 +31,76 @@
     <div class="articles-container">
       <h2 class="title-underline3" >RETROUVEZ TOUS LES FOCUS</h2>
       <div class="article">
+        <img src="./img/Focus/VanGoathe/Shoto.jpg" alt="VanGoathe">
+        <h2>GOATHE©</h2>
+        <div class="article-author">
+          <p>M. Lemercier</p>
+        </div>
+        <div class="article-content">
+          <p>Je promeus ce mois-ci <span class="gras">@vangoathe</span>.
+            Ce mois-ci, c'est un artiste de plus grand envergure que je vais présenter. En effet, il a déjà acquis une solide "fanbase" (+166000 abonnés instagram!).
+            Au commencement, goathe ne dessinait que des personnalités avec un streetstyle qui change de leur style habituel.
+            Les personnages sont redessinés, et le style de ces derniers rend un visuel atypique et plaisant. J'en fais la promotion car il dessine actuellement presque uniquement des personnages de manga en streetstyle. Mais les personnalités qu'il dessine sont également très bien réalisées, je vous conseille d'y jeter un oeil!
+            Les dessins sont extrêmement complexe avec beaucoup de détails. On ressent l'intêret pour la mode et le streetstyle dans ses dessins. C'est très fort!
+            Sa popularité lui a permis d'ouvrir un e-shop dans lequel on peut acheter ses oeuvres.
+            Je vous laisse ci-dessous quelques unes de ses oeuvres, son instagram & un lien vers son shop. 
+            Au plaisir pour un nouveau focus :)</p>
+        </div>
+        <div class="article-date">
+          <p>Septembre 2020</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
+              <img src="./img/Focus/VanGoathe/GTO.jpg" alt="GTO" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Onizuka</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Auteur: @Vangoathe</p>
+              </div>
+          </li>
+          <li class="appreciate-elem">
+            <img src="./img/Focus/VanGoathe/Robin.jpg" alt="Robin" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Nico Robin</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: @Vangoathe</p>
+            </div>
+        </li>
+          <li class="appreciate-elem">
+            <img src="./img/Focus/VanGoathe/Nezuko.jpg" alt="Nezuko" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Nezuko Kamado</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: @Vangoathe</p>
+            </div>
+        </li>
+        <li class="appreciate-elem">
+          <img src="./img/Focus/VanGoathe/Kirua.jpg" alt="Kirua" class="appreciate-elem-img">
+          <div class="appreciate-elem-text">
+              <p>Kirua Zoldyck</p>
+              <div class="appreciate-separator"></div>
+              <p>Auteur: @Vangoathe</p>
+          </div>
+      </li>
+        </ul>
+    </div>
+  </section>
+  <div class="cover">
+    <a class="espacedroite" href="https://www.inprnt.com/gallery/vangoathe/">
+      <i class="fas fa-shopping-cart"></i>SHOP
+    </a>
+    <a class="espacegauche" href="https://www.instagram.com/vangoathe/">
+      <i class="fab fa-instagram"></i>GOATHE©
+    </a>
+  </div>
+  <div class="content">
+    <div class="articles-container">
+      <div class="article">
         <img src="./img/Focus/Osharena/osharenapp.jpg" alt="Osharena">
         <h2>Osharena</h2>
         <div class="article-author">
