--- a/index.html
+++ b/index.html
@@ -45,66 +45,66 @@
     </section>
     <section id="Appreciate" class="appreciate">
       <div class="container">
-          <h2 class="title-underline" >L'arrivée de DEMON SLAYER sur "WALL." !</h2>
+          <h2 class="title-underline" >L'arrivée des PILIERS sur "WALL." !</h2>
           <ul class="appreciate-list">
-              <li class="appreciate-elem">
-                  <img src="./img/OTHER/Demon Slayer/Nezukoadidas.jpeg" alt="Nezuko" class="appreciate-elem-img">
-                  <div class="appreciate-elem-text">
-                      <p>Nezuko Kamado</p>
-                      <p>Adidas</p>
-                      <div class="appreciate-separator"></div>
-                      <p>Auteur: DYM</p>
-                  </div>
-              </li>
-              <li class="appreciate-elem">
-                <img src="./img/OTHER/Demon Slayer/Tanjirocoverhamza.JPG" alt="Tanjiro" class="appreciate-elem-img">
-                <div class="appreciate-elem-text">
-                    <p>Tanjiro Kamado</p>
-                    <p>Cover Hamza - 1994</p>
-                    <div class="appreciate-separator"></div>
-                    <p>Auteur: coverxanimes</p>
-                </div>
-            </li>
             <li class="appreciate-elem">
-              <img class="eren" src="./img/OTHER/Demon Slayer/zenitsu2.jpg" alt="Zenitsu" class="appreciate-elem-img">
+              <img src="./img/OTHER/Demon Slayer/Rengokucouchedesoleil.JPG" alt="Rengoku" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
-                  <p>Zenitsu agatsuma</p>
-                  <p>Hot theme</p>
+                  <p>Kyojuro Rengoku</p>
+                  <p>Pilier du Feu</p>
                   <div class="appreciate-separator"></div>
-                  <p>Auteur: Hermès</p>
+                  <p>Auteur: YXNTW</p>
               </div>
             </li>
             <li class="appreciate-elem">
-              <img class="eren" src="./img/OTHER/Demon Slayer/tomiokagiyu.jpeg" alt="Ace" class="appreciate-elem-img">
+              <img src="./img/OTHER/Demon Slayer/Shinazugawa.jpeg" alt="Shinazugawa" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
-                  <p>Tomioka Giyu</p>
-                  <p>Range son sabre</p>
+                  <p>Shinazugawa</p>
+                  <p>Pilier du Vent</p>
                   <div class="appreciate-separator"></div>
-                  <p>Auteur: OXY</p>
+                  <p>Auteur: Oxy</p>
               </div>
-            </li>
+          </li>
+            <li class="appreciate-elem">
+              <img src="./img/OTHER/Demon Slayer/tomioka2.jpeg" alt="Tomioka" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Giyu Tomioka</p>
+                  <p>Pilier de l'Eau</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Auteur: @Snow_224_</p>
+              </div>
+          </li>
+          <li class="appreciate-elem">
+            <img src="./img/OTHER/Demon Slayer/shinobu.JPG" alt="Shinobu" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Shinobu Kocho</p>
+                <p>Pilier de l'insecte</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: Tark</p>
+            </div>
+        </li>
           </ul>
       </div>
     </section>
     <div class="pack">
       <div class="pack-container">
-        <h2>STARTER PACK</h2>
-        <p>Don Quichotte Doflamingo</p>
+        <h2 class="pack-title">STARTER PACK</h2>
+        <p class="pack-title">KAKASHI HATAKE VS ITACHI UCHIWA</p>
           <div class="starter">
             <ul class="starter-list1">
               <li class="starter-elem">
-                <img class="borderpack" src="./img/affiche/Doflamingo/1.jpeg" alt="doflamingo">
+                <img class="borderpack" src="./img/affiche/KakashivsItachi/Itachi.JPG" alt="Itachi">
               </li>
               <li class="starter-elem">
-                <img class="borderpack" src="./img/affiche/Doflamingo/2.jpeg" alt="doflamingo">
+                <img class="borderpack" src="./img/affiche/KakashivsItachi/Kakashi.JPG" alt="Kakashi">
               </li>
             </ul>
             <ul class="starter-list2">
               <li class="starter-elem">
-                <img class="borderpack" src="./img/affiche/Doflamingo/3.jpeg" alt="doflamingo">
+                <img class="borderpack" src="./img/affiche/KakashivsItachi/Itachieyes.JPG" alt="Itachieyes">
               </li>
               <li class="starter-elem">
-                <img class="borderpack" src="./img/affiche/Doflamingo/4.jpeg" alt="doflamingo">
+                <img class="borderpack" src="./img/affiche/KakashivsItachi/Kakashieyes.JPG" alt="Kakashieyes">
               </li>
             </ul>
           </div>
@@ -114,22 +114,23 @@
       <div class="articles-container">
         <h2 class="title-underline2" >LE FOCUS</h2>
         <div class="article">
-          <img src="./img/Focus/Osharena/osharenapp.jpg" alt="Osharena">
-          <h2>Osharena</h2>
+          <img src="./img/Focus/VanGoathe/Shoto.jpg" alt="VanGoathe">
+          <h2>GOATHE©</h2>
           <div class="article-author">
             <p>M. Lemercier</p>
           </div>
           <div class="article-content">
-            <p>Je promeus ce mois-ci <span class="gras">@osharena_</span>.
-              Il a récemment percé sur les réseaux avec une idée originale. Le principe de ses dessins est de reprendre un personnage d'animé et de le revêtir d'habits d'une marque de luxe.
-              Les personnages sont redessinés, et le style de ces derniers rend un visuel incroyable. Il a posté pour la première fois le 26 avril et compte aujourd'hui plus de 3825 abonnés et 82 personnages.
-              Toute la complexité des oeuvres résident dans la difficulté a bien redessiné le style vestimentaire d'une marque spécifique sur un personnage de manga.
-              Cette récente popularité lui a permis d'ouvrir un e-shop dans lequel on peut acheter les oeuvres de l'artiste.
+            <p>Je promeus ce mois-ci <span class="gras">@vangoathe</span>.
+              Ce mois-ci, c'est un artiste de plus grand envergure que je vais présenter. En effet, il a déjà acquis une solide "fanbase" (+166000 abonnés instagram!).
+              Au commencement, goathe ne dessinait que des personnalités avec un streetstyle qui change de leur style habituel.
+              Les personnages sont redessinés, et le style de ces derniers rend un visuel atypique et plaisant. J'en fais la promotion car il dessine actuellement presque uniquement des personnages de manga en streetstyle. Mais les personnalités qu'il dessine sont également très bien réalisées, je vous conseille d'y jeter un oeil!
+              Les dessins sont extrêmement complexe avec beaucoup de détails. On ressent l'intêret pour la mode et le streetstyle dans ses dessins. C'est très fort!
+              Sa popularité lui a permis d'ouvrir un e-shop dans lequel on peut acheter ses oeuvres.
               Je vous laisse ci-dessous quelques unes de ses oeuvres, son instagram & un lien vers son shop. 
               Au plaisir pour un nouveau focus :)</p>
           </div>
           <div class="article-date">
-            <p>Août 2020</p>
+            <p>Septembre 2020</p>
           </div>
         </div>
       </div>
@@ -138,50 +139,46 @@
       <div class="container">
           <ul class="appreciate-list">
               <li class="appreciate-elem">
-                <img src="./img/Focus/Osharena/freezerosharena.jpg" alt="Freezer" class="appreciate-elem-img">
+                <img src="./img/Focus/VanGoathe/GTO.jpg" alt="GTO" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
-                    <p>Freezer</p>
-                    <p>for BALMAIN</p>
+                    <p>Onizuka</p>
                     <div class="appreciate-separator"></div>
-                    <p>Auteur: @Osharena_</p>
+                    <p>Auteur: @Vangoathe</p>
                 </div>
             </li>
             <li class="appreciate-elem">
-              <img src="./img/Focus/Osharena/Doflamingoosharena.jpg" alt="Doflamingo" class="appreciate-elem-img">
+              <img src="./img/Focus/VanGoathe/Robin.jpg" alt="Robin" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
-                  <p>Doflamingo</p>
-                  <p>for MAISON KITSUNÉ</p>
+                  <p>Nico Robin</p>
                   <div class="appreciate-separator"></div>
-                  <p>Auteur: @Osharena_</p>
+                  <p>Auteur: @Vangoathe</p>
               </div>
           </li>
             <li class="appreciate-elem">
-              <img src="./img/Focus/Osharena/itachiosharena.jpg" alt="itachi" class="appreciate-elem-img">
+              <img src="./img/Focus/VanGoathe/Nezuko.jpg" alt="Nezuko" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
-                  <p>Itachi Uchiha</p>
-                  <p>for DIOR</p>
+                  <p>Nezuko Kamado</p>
                   <div class="appreciate-separator"></div>
-                  <p>Auteur: @Osharena_</p>
+                  <p>Auteur: @Vangoathe</p>
               </div>
           </li>
           <li class="appreciate-elem">
-            <img src="./img/Focus/Osharena/mikasaorsharena.jpg" alt="Mikasa" class="appreciate-elem-img">
+            <img src="./img/Focus/VanGoathe/Kirua.jpg" alt="Kirua" class="appreciate-elem-img">
             <div class="appreciate-elem-text">
-                <p>Mikasa Ackerman</p>
-                <p>for MAISON MARGIELA</p>
+                <p>Kirua Zoldyck</p>
                 <div class="appreciate-separator"></div>
-                <p>Auteur: @Osharena_</p>
+                <p>Auteur: @Vangoathe</p>
             </div>
         </li>
           </ul>
       </div>
     </section>
     <div class="cover">
-      <a class="espacedroite" href="https://www.etsy.com/fr/shop/OsharenaShop?ref=search_shop_redirect">
+      <a class="espacedroite" href="https://www.inprnt.com/gallery/vangoathe/">
         <i class="fas fa-shopping-cart"></i>SHOP
       </a>
-      <a class="espacegauche" href="https://www.instagram.com/osharena_/">
-        <i class="fab fa-instagram"></i>Osharena_
+      <a class="espacegauche" href="https://www.instagram.com/vangoathe/">
+        <i class="fab fa-instagram"></i>GOATHE©
       </a>
     </div>
     <footer>
