--- a/PDemonSlayer.html
+++ b/PDemonSlayer.html
@@ -97,7 +97,7 @@
                     <p>Kyojuro Rengoku</p>
                     <p>Couché de soleil</p>
                     <div class="appreciate-separator"></div>
-                    <p>Auteur: YXNTW</p>
+                    <p>Auteur: YXNIW</p>
                 </div>
             </li>
             <li class="appreciate-elem">
