--- a/computer.html
+++ b/computer.html
@@ -38,6 +38,17 @@
           <li>
             <div class="espacetitre">
               <h2>
+                Mitsuha
+              </h2>
+            </div>
+            <img src="./img/PC/MitsuhaPC.jpeg" alt="Mitsuha">
+            <h2>
+              YOUR NAME
+            </h2>
+          </li>
+          <li>
+            <div class="espacetitre">
+              <h2>
                 Mugiwaras
               </h2>
             </div>
@@ -49,7 +60,7 @@
           <li>
             <div class="espacetitre">
               <h2>
-                Disponible uniquement ici à l'affiche pour le moment !
+                Shiganshina
               </h2>
             </div>
             <img src="./img/PC/mikasavscuirassePC.jpeg" alt="Mikasa">
@@ -142,18 +153,23 @@
         </li>
         <li>
           <h3>MHA</h3>
-          
+          <p>+2 fonds d'écrans</p>
           <a href="computerMHA.html">VOIR</a>
         </li>
         <li>
           <h3>DRAGONBALL</h3>
-          
+          <p>+2 fonds d'écrans</p>
           <a href="computerDB.html">VOIR</a>
         </li>
         <li>
           <h3>NARUTO</h3>
           <p>+2 fonds d'écrans</p>
           <a href="computerNaruto.html">VOIR</a>
+        </li>
+        <li>
+          <h3>YOUR NAME</h3>
+          <p>+2 fonds d'écrans</p>
+          <a href="computerYN.html">VOIR</a>
         </li>
       </ul>
       <div class="banner-container-link-social">
