--- a/computerMHA.html
+++ b/computerMHA.html
@@ -33,6 +33,7 @@
     <a href="computerSNK.html">SNK</a>
     <a href="computerDB.html">DB</a>
     <a class="active" href="computerMHA.html">MHA</a>
+    <a href="computerYN.html">YOUR NAME</a>
   </nav>
 <section id="Appreciate" class="appreciate">
   <div class="container">
@@ -73,6 +74,28 @@
                 <p>Kaminari & Mineta</p>
                 <div class="appreciate-separator"></div>
                 <p>Chill</p>
+            </div>
+        </li>
+      </ul>
+  </div>
+</section>
+<section id="Appreciate" class="appreciate">
+  <div class="container">
+      <ul class="appreciate-list">
+          <li class="appreciate-elem">
+              <img class="fdepc" src="./img/PC/hidaochakodekubakugofrogshotoPC.jpeg" alt="hida" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Hida, Ochako, Izuku, Bakugo, Tsuyu & Shoto</p>
+                  <div class="appreciate-separator"></div>
+                  <p>team</p>
+              </div>
+          </li>
+          <li class="appreciate-elem">
+            <img class="fdepc" src="./img/PC/DekuvsBakugoPC.jpeg" alt="dekuvsbakugo" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Deku vs Bakugo</p>
+                <div class="appreciate-separator"></div>
+                <p>Duel</p>
             </div>
         </li>
       </ul>
