--- a/computerNaruto.html
+++ b/computerNaruto.html
@@ -33,6 +33,7 @@
     <a href="computerSNK.html">SNK</a>
     <a href="computerDB.html">DB</a>
     <a href="computerMHA.html">MHA</a>
+    <a href="computerYN.html">YOUR NAME</a>
   </nav>
 <section id="Appreciate" class="appreciate">
   <div class="container">
