--- a/computerOP.html
+++ b/computerOP.html
@@ -33,6 +33,7 @@
     <a href="computerSNK.html">SNK</a>
     <a href="computerDB.html">DB</a>
     <a href="computerMHA.html">MHA</a>
+    <a href="computerYN.html">YOUR NAME</a>
   </nav>
   <section id="Appreciate" class="appreciate">
     <div class="container">
@@ -161,6 +162,28 @@
                 <p>Roronoa Zoro</p>
                 <div class="appreciate-separator"></div>
                 <p>vs Killer</p>
+            </div>
+        </li>
+      </ul>
+  </div>
+</section>
+<section id="Appreciate" class="appreciate">
+  <div class="container">
+      <ul class="appreciate-list">
+          <li class="appreciate-elem">
+              <img class="fdepc" src="./img/PC/Doflamingofamily.jpeg" alt="Doflamingo" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Doflamingo</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Family</p>
+              </div>
+          </li>
+          <li class="appreciate-elem">
+            <img class="fdepc" src="./img/PC/ONEPIECE1PC.jpeg" alt="OP" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Monkey D. Luffy</p>
+                <div class="appreciate-separator"></div>
+                <p>COVER</p>
             </div>
         </li>
       </ul>
