--- a/computerYN.html
+++ b/computerYN.html
@@ -30,55 +30,33 @@
   <nav>
     <a href="computerNaruto.html">NARUTO</a>
     <a href="computerOP.html">ONE PIECE</a>
-    <a class="active" href="computerSNK.html">SNK</a>
+    <a href="computerSNK.html">SNK</a>
     <a href="computerDB.html">DB</a>
     <a href="computerMHA.html">MHA</a>
-    <a href="computerYN.html">YOUR NAME</a>
+    <a class="active" href="computerYN.html">YOUR NAME</a>
   </nav>
   <section id="Appreciate" class="appreciate">
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
-                <img class="fdepc" src="./img/PC/LivaivsKennyPC.jpg" alt="LeviKenny" class="appreciate-elem-img">
+                <img class="fdepc" src="./img/PC/MitsuhaPC.jpeg" alt="Mitsuha" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
-                    <p>Livaï vs Kenny</p>
+                    <p>Mitsuha Miyamizu</p>
                     <div class="appreciate-separator"></div>
-                    <p>Duel</p>
+                    <p>Météorite</p>
                 </div>
             </li>
             <li class="appreciate-elem">
-              <img class="fdepc" src="./img/PC/mikasavscuirassePC.jpeg" alt="mikasa" class="appreciate-elem-img">
+              <img class="fdepc" src="./img/PC/TakiPC.jpeg" alt="taki" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
-                  <p>Mikasa vs Cuirassé</p>
+                  <p>Taki</p>
                   <div class="appreciate-separator"></div>
-                  <p>Bataille de Shiganshina</p>
+                  <p>Météorite</p>
               </div>
           </li>
         </ul>
     </div>
   </section>
-<section id="Appreciate" class="appreciate">
-  <div class="container">
-      <ul class="appreciate-list">
-          <li class="appreciate-elem">
-              <img class="fdepc" src="./img/PC/ErwinSmithPC.png" alt="ErwinPC" class="appreciate-elem-img">
-              <div class="appreciate-elem-text">
-                  <p>Erwin Smith</p>
-                  <div class="appreciate-separator"></div>
-                  <p>Blessé</p>
-              </div>
-          </li>
-          <li class="appreciate-elem">
-            <img class="fdepc" src="./img/PC/Levi&erenPC.png" alt="Levi" class="appreciate-elem-img">
-            <div class="appreciate-elem-text">
-                <p>Livaï & Eren</p>
-                <div class="appreciate-separator"></div>
-                <p>Arrivée Eren dans le bataillon d'exploration</p>
-            </div>
-        </li>
-      </ul>
-  </div>
-</section>
 <footer>
   <div class="block">
       <h2>SOCIAL</h2>
