--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                   <p>Kyojuro Rengoku</p>
                   <p>Pilier du Feu</p>
                   <div class="appreciate-separator"></div>
-                  <p>Auteur: YXNTW</p>
+                  <p>Auteur: YXNIW</p>
               </div>
             </li>
             <li class="appreciate-elem">
