--- a/computerDB.html
+++ b/computerDB.html
@@ -33,6 +33,7 @@
     <a href="computerSNK.html">SNK</a>
     <a class="active" href="computerDB.html">DRAGONBALL</a>
     <a href="computerMHA.html">MHA</a>
+    <a href="computerYN.html">YOUR NAME</a>
   </nav>
   <section id="Appreciate" class="appreciate">
     <div class="container">
