--- a/PNaruto.html
+++ b/PNaruto.html
@@ -101,7 +101,7 @@
                 </div>
             </li>
             <li class="appreciate-elem">
-                <img src="./img/Naruto/SasukeMandaII.JPG" alt="SasukeMandaII" class="appreciate-elem-img">
+                <img src="./img/Naruto/SasukeMandaII.jpeg" alt="SasukeMandaII" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Sasuke Uchiwa</p>
                     <p>& Manda II</p>
@@ -110,12 +110,12 @@
                 </div>
             </li>
             <li class="appreciate-elem">
-              <img class="tapion" src="./img/Naruto/Yamato.jpeg" alt="Yamato" class="appreciate-elem-img">
+              <img class="tapion" src="./img/Naruto/Hashirama2.jpeg" alt="Hashirama" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
-                  <p>Yamato</p>
-                  <p>"MOKUTON"</p>
+                  <p>Hashirama Senju</p>
+                  <p>Torse nu</p>
                   <div class="appreciate-separator"></div>
-                  <p>Auteur: Heaten</p>
+                  <p>Auteur: Narutovie</p>
               </div>
           </li>
         </ul>
