--- a/index.html
+++ b/index.html
@@ -45,42 +45,42 @@
     </section>
     <section id="Appreciate" class="appreciate">
       <div class="container">
-          <h2 class="title-underline" >L'arrivée des PILIERS sur "WALL." !</h2>
+          <h2 class="title-underline" >HUNTERXHUNTER EST SUR WALL. !</h2>
           <ul class="appreciate-list">
             <li class="appreciate-elem">
-              <img src="./img/OTHER/Demon Slayer/Rengokucouchedesoleil.JPG" alt="Rengoku" class="appreciate-elem-img">
+              <img src="./img/HxH/Gonpeche.JPG" alt="GON" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
-                  <p>Kyojuro Rengoku</p>
-                  <p>Pilier du Feu</p>
+                  <p>Gon Freeccs</p>
+                  <p>Pêche</p>
                   <div class="appreciate-separator"></div>
-                  <p>Auteur: YXNIW</p>
+                  <p>Auteur: Heaten</p>
               </div>
             </li>
             <li class="appreciate-elem">
-              <img src="./img/OTHER/Demon Slayer/Shinazugawa.jpeg" alt="Shinazugawa" class="appreciate-elem-img">
+              <img src="./img/HxH/hisoka4.jpeg" alt="Hisoka" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
-                  <p>Shinazugawa</p>
-                  <p>Pilier du Vent</p>
+                  <p>Hisoka Morow</p>
+                  <p>Coquelicots</p>
                   <div class="appreciate-separator"></div>
-                  <p>Auteur: Oxy</p>
+                  <p>Auteur: D.Lelie</p>
               </div>
           </li>
             <li class="appreciate-elem">
-              <img src="./img/OTHER/Demon Slayer/tomioka2.jpeg" alt="Tomioka" class="appreciate-elem-img">
+              <img src="./img/HxH/irumi.jpeg" alt="Irumi" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
-                  <p>Giyu Tomioka</p>
-                  <p>Pilier de l'Eau</p>
+                  <p>Irumi Zoldyck</p>
+                  <p>Moonlight</p>
                   <div class="appreciate-separator"></div>
-                  <p>Auteur: @Snow_224_</p>
+                  <p>Auteur: Bioravuto</p>
               </div>
           </li>
           <li class="appreciate-elem">
-            <img src="./img/OTHER/Demon Slayer/shinobu.JPG" alt="Shinobu" class="appreciate-elem-img">
+            <img src="./img/HxH/KiruaMoon.JPG" alt="Kirua" class="appreciate-elem-img">
             <div class="appreciate-elem-text">
-                <p>Shinobu Kocho</p>
-                <p>Pilier de l'insecte</p>
+                <p>Kirua Zoldyck</p>
+                <p>Lightning</p>
                 <div class="appreciate-separator"></div>
-                <p>Auteur: Tark</p>
+                <p>Auteur: BULEHYA</p>
             </div>
         </li>
           </ul>
@@ -89,22 +89,22 @@
     <div class="pack">
       <div class="pack-container">
         <h2 class="pack-title">STARTER PACK</h2>
-        <p class="pack-title">KAKASHI HATAKE VS ITACHI UCHIWA</p>
+        <p class="pack-title">RORONOA ZORO</p>
           <div class="starter">
             <ul class="starter-list1">
               <li class="starter-elem">
-                <img class="borderpack" src="./img/affiche/KakashivsItachi/Itachi.JPG" alt="Itachi">
+                <img class="borderpack" src="./img/affiche/ZORO/Zoro1.jpeg" alt="ZORO">
               </li>
               <li class="starter-elem">
-                <img class="borderpack" src="./img/affiche/KakashivsItachi/Kakashi.JPG" alt="Kakashi">
+                <img class="borderpack" src="./img/affiche/ZORO/Zoro2.jpeg" alt="ZORO">
               </li>
             </ul>
             <ul class="starter-list2">
               <li class="starter-elem">
-                <img class="borderpack" src="./img/affiche/KakashivsItachi/Itachieyes.JPG" alt="Itachieyes">
+                <img class="borderpack" src="./img/affiche/ZORO/Zoro3.jpeg" alt="ZORO">
               </li>
               <li class="starter-elem">
-                <img class="borderpack" src="./img/affiche/KakashivsItachi/Kakashieyes.JPG" alt="Kakashieyes">
+                <img class="borderpack" src="./img/affiche/ZORO/Zoro4.jpeg" alt="ZORO">
               </li>
             </ul>
           </div>
